SERVER-53084 Run onFinish callback out of line in the NetworkInterfaceTL